Refactor: View 리팩토링

--- a/src/main/resources/templates/create-event.html
+++ b/src/main/resources/templates/create-event.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/global.css" />
   </head>
   <body>
+    <header th:fragment="header"></header>
     <div class="container">
       <h1>행사 등록</h1>
       <form th:action="@{/event}" method="post">
