--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,21 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DEAS Header</title>
-</head>
-<body>
-<header th:fragment="header">
-    <div style="display: flex; justify-content: space-between; align-items: center;">
-        <a th:href="@{/home}" style="font-size: 20px; color: black;">DEAS</a>
-        <div style="display: flex; align-items: center; gap: 15px;">
-            <p>[[${session.id}]] ([[${session.name}]])님</p>
-            <a th:href="@{/logout}" class="logout-button">로그아웃</a>
+  </head>
+  <body>
+    <header th:fragment="header">
+      <div>
+        <a th:href="@{/home}">DEAS</a>
+        <div>
+          <p>[[${session.id}]] ([[${session.name}]])님</p>
+          <a th:href="@{/logout}" class="logout-button">로그아웃</a>
         </div>
-    </div>
-</header>
-</body>
+      </div>
+    </header>
+  </body>
 </html>
