--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,26 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" th:href="@{/css/global.css}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" th:href="@{/css/global.css}" />
     <title>DEAS</title>
-</head>
-<body>
-<div th:replace="header :: header"></div>
-<main style="margin-top: 60px;">
-    <h1>DEAS</h1>
-    <div class="container">
+  </head>
+  <body>
+    <div th:replace="header :: header"></div>
+    <main>
+      <h1>DEAS</h1>
+      <div class="container">
         <nav class="menu">
-            <ul>
-                <li><a href="/event">행사 보기</a></li>
-                <li><a href="/event/create">행사 만들기</a></li>
-                <li><a href="/profile">지원 정보</a></li>
-            </ul>
+          <ul>
+            <li><a href="/event">행사 보기</a></li>
+            <li><a href="/event/create">행사 만들기</a></li>
+            <li><a href="/profile">지원 정보</a></li>
+          </ul>
         </nav>
-    </div>
-</main>
-</body>
+      </div>
+    </main>
+  </body>
 </html>
