--- a/src/main/resources/templates/event-detail.html
+++ b/src/main/resources/templates/event-detail.html
@@ -55,7 +55,7 @@
         <h2>설명</h2>
         <p>[[${event.description}]]</p>
         <h2>참가 신청</h2>
-        <a th:href="@{/event/apply/event.id}">신청하기</a>
+        <a th:href="@{'/event/apply/' + ${event.id}}">신청하기</a>
       </div>
     </main>
   </body>
