Refactor: Domain 별 Controller 구분, home url '/' 으로 수정

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -12,7 +12,7 @@
   <body>
     <header th:fragment="header">
       <div>
-        <a th:href="@{/home}">DEAS</a>
+        <a th:href="@{/}">DEAS</a>
         <div>
           <p>[[${session.id}]] ([[${session.name}]])님</p>
           <a th:href="@{/logout}" class="logout-button">로그아웃</a>
