--- a/src/main/resources/templates/create-event.html
+++ b/src/main/resources/templates/create-event.html
@@ -235,7 +235,7 @@
         <input type="text" name="questions[]" required />
         <div>
           <label>
-            <input type="radio" name="questionType${questionIndex}" value="ESSAY" onchange="toggleOptions(this)" required selected /> 단답형
+            <input type="radio" name="questionType${questionIndex}" value="ESSAY" onchange="toggleOptions(this)" required checked /> 단답형
           </label>
           <label>
             <input type="radio" name="questionType${questionIndex}" value="CHOICE" onchange="toggleOptions(this)" required /> 객관식
