--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -15,7 +15,7 @@
         <a th:href="@{/}">DEAS</a>
         <div>
           <p>[[${session.id}]] ([[${session.name}]])님</p>
-          <a th:href="@{/logout}" class="logout-button">로그아웃</a>
+          <a th:href="@{/login}" class="logout-button">로그아웃</a>
         </div>
       </div>
     </header>
